--- a/static/styles.css
+++ b/static/styles.css
@@ -1,10 +1,3 @@
-    /* 样式化方形控件 放置图片 */
-    .file-container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-    }
-
     /*横向控件 按日期排列图片*/
     .horizontal-container {
         display: flex;
@@ -16,6 +9,10 @@
     }
 
     .file-box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         position: relative;
         width: 200px;
         height: 200px;
